<resources>
    <!-- 标题 -->
    <string name="app_name">校园论坛</string>
    <string name="title_home">广场</string>
    <string name="title_account">用户</string>
    <string name="title_notifications">通知</string>

    <!-- 错误 -->
    <string name="unknown_error">未知错误</string>

    <!-- 网络相关 -->
    <string name="network_error">网络连接失败</string>
    <string name="server_error">服务器发生错误</string>

    <!-- 按钮 -->
    <string name="button_ok">确认</string>
    <string name="button_cancel">取消</string>
    <string name="button_login">登录</string>
    <string name="button_post">发布</string>
    <string name="button_close">关闭</string>
    <string name="button_draft">存草稿</string>
    <string name="button_follow">关注</string>
    <string name="button_unfollow">已关注</string>
    <string name="button_send">发送</string>
    <string name="button_setting">编辑资料</string>
    <string name="button_white">取消屏蔽</string>

    <!-- 提示 -->
    <string name="title_hint">标题</string>
    <string name="content_hint">发布你此刻的看法~</string>
    <string name="comment_hint">发布你的评论~</string>
    <string name="max_image_hint">最多只能添加9张图片</string>
    <string name="max_audio_hint">最多只能添加1段音频</string>
    <string name="max_video_hint">最多只能添加1段视频</string>
    <string name="no_more_tweet_hint">没有更多的动态了~</string>
    <string name="no_more_comment_hint">没有更多的评论了~</string>
    <string name="no_more_user_list_hint">没有更多的用户了~</string>
    <string name="no_more_draft_hint">没有更多的草稿了~</string>

    <!-- 询问 -->
    <string name="question_cancel_edit">确定退出编辑？</string>
    <string name="question_add_location">确定添加位置信息？</string>
    <string name="question_post">确定发布？</string>
    <string name="question_logout">确定退出登录？</string>
    <string name="question_black">确定屏蔽该用户？</string>
    <string name="question_white">确定取消屏蔽？</string>
    <string name="question_delete_comment">确定删除评论？</string>
    <string name="question_delete_draft">确定删除草稿？</string>
    <string name="question_delete_tweet">确定删除动态？</string>

    <!-- 登录/注册 -->
    <string name="login_name">登录</string>
    <string name="register_name">注册</string>
    <string name="email_label">邮箱</string>
    <string name="password_label">密码</string>
    <string name="forget_label">忘记密码</string>
    <string name="register_label">注册账号</string>
    <string name="register_success">注册成功</string>
    <string name="login_required">登录后查看</string>
    <string name="login_success">登录成功</string>
    <string name="logout_success">退出登录成功</string>
    <string name="email_required">请输入邮箱</string>
    <string name="password_required">请输入密码</string>
    <string name="valid_email_required">请使用清华邮箱</string>

    <!-- 广场 -->
    <string name="home_tab_all">全部动态</string>
    <string name="home_tab_my">已关注</string>
    <string name="floating_action_button_description">发布</string>

    <!-- 推文 -->
    <string name="menu_search_description">搜索</string>
    <string name="is_searching">搜索中</string>
    <string name="share">分享</string>
    <string name="detail">详情</string>
    <string name="follow_success">关注成功</string>
    <string name="unfollow_success">取消关注成功</string>
    <string name="like_success">点赞成功</string>
    <string name="initial_load_tweet">已为您加载了%d条动态~</string>
    <string name="continue_load_tweet">wow，又有新的%d条动态~</string>
    <string name="no_new_load_tweet">没有更多的动态了~</string>
    <string name="initial_load_comment">已为您加载了%d条评论~</string>
    <string name="continue_load_comment">wow，又有新的%d条评论~</string>
    <string name="no_new_load_comment">没有更多的评论了~</string>
    <string name="comment_success">评论成功</string>
    <string name="delete_tweet_success">删除动态成功</string>
    <string name="delete_draft_success">删除草稿成功</string>
    <string name="delete_comment_success">删除评论成功</string>

    <!-- 编辑 -->
    <string name="edit_name">编辑</string>
    <string name="add_location">添加地点</string>
    <string name="audio">音频</string>
    <string name="image">图像</string>
    <string name="video">视频</string>
    <string name="add_location_success">获取位置信息成功</string>
    <string name="add_location_fail">获取位置信息失败</string>
    <string name="audio_recording_time_is_short">录音时间过短</string>
    <string name="audio_recording">长按录音</string>
    <string name="audio_recording_over">录音结束</string>
    <string name="post_success">发布成功</string>
    <string name="post_required">写些有趣的东西吧~</string>
    <string name="title_required">填下标题吧~</string>
    <string name="draft_success">保存草稿成功</string>
    <string name="no_title">无标题</string>
    <string name="no_content">无正文内容</string>

    <!-- 用户 -->
    <string name="nickname">用户名</string>
    <string name="description">个人简介</string>
    <string name="headshot">头像</string>
    <string name="tweet">动态</string>
    <string name="follow">关注</string>
    <string name="follow_list">关注列表</string>
    <string name="follower">粉丝</string>
    <string name="follower_list">粉丝列表</string>
    <string name="edit_profile">编辑资料</string>
    <string name="draft_box">草稿箱</string>
    <string name="blacklist">黑名单</string>
    <string name="edit_password">修改密码</string>
    <string name="quit">退出登录</string>
    <string name="user_space">个人主页</string>
    <string name="description_empty">这个人很懒，什么都没留下~</string>\
    <string name="edit_success">编辑成功</string>
    <string name="edit_password_success">修改密码成功</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="again_password">再次输入</string>
    <string name="again_login_required">登录已失效，请重新登录</string>
    <string name="again_password_error">两次输入的密码不一致</string>
    <string name="black_success">屏蔽成功</string>
    <string name="white_success">取消屏蔽成功</string>

    <!-- 通知 -->
    <string name="notification_list">通知列表</string>
    <string name="like">赞同</string>
    <string name="comment">评论</string>
    <string name="like_your_tweet">%s赞了你的动态</string>
    <string name="comment_your_tweet">%s评论了你的动态</string>
    <string name="follow_new_tweet">%s发布了新的动态</string>
    <string name="new_like_notification">wow，又有%d条新通知</string>
    <string name="no_more_notification">没有新的通知了~</string>
    <string name="load_some_notification">已经为您加载了%d条通知</string>

    <!-- 测试用 -->
    <string name="test_notification_content">呐，听他们说，还有十几天就2020年了，die xio? (咬手)。搭噶啦作为贫困户的bokuwa,也意味着要西内了呢。(伊利亚微笑脸)能认识米娜桑这些有钱人，哄都尼五路洗(低头流泪)，哄都! (抬头微笑) 你们不要哭了(眼角泛着泪光),答应bokuwa,要照常生活下去哦呐。。。（伸出的小手又迅速垂下去）嗦嘎（表情有点失落），米娜桑已经不喜欢了呀（紧咬嘴唇），得磨，米娜桑忘了当初吗（握紧小手），莫以得丝（强忍住眼泪），已经大丈夫了呦（挤出笑脸），瓦大喜瓦，滋多滋多，滋多滋多（语气越来越用力了）滋多戴斯给！！！一滋嘛叠磨瓦撕裂嘛赛！！！至死都不会瓦斯裂嘛斯（认真的表情）诶多诶多~「多洗忒」?为什么要「妄.图.抹.杀」这样的「自己」呢?★(笑)呐、「中二病的你」 也好、「二 次元的你」也好…「全部」daisuki二次元民那赛高desuwa!</string>
    <string name="test_like_content">测试用动态内容</string>
</resources>