<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    tools:context=".ui.notifications.NotificationsFragment">
    <LinearLayout
        android:id="@+id/notification_image_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/notification_like_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_like_24dp"/>
            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:text="@string/like"
                android:textSize="@dimen/textSize_big" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification_follow_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_follow_24dp"/>
            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:text="@string/follow"
                android:textSize="@dimen/textSize_big" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification_comment_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_comment_24dp"/>
            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:text="@string/comment"
                android:textSize="@dimen/textSize_big" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/notification_divider"
        app:layout_constraintTop_toBottomOf="@id/notification_image_list"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="?android:attr/listDivider" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notification_divider"
        android:id="@+id/message_swipe_refresh_layout">
        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_notification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/message_swipe_refresh_layout">
        <TextView
            android:id="@+id/no_notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_more_notification"
            android:textSize="@dimen/textSize_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>